# hue-control

./: .gitignore  LICENSE  README.md  REFACTORING_PLAN.md  ZONE_PROGRAMMING_GUIDE.md  hue_backup.py  hue_control.py  pyproject.toml
commands/: __init__.py  cache.py  clone_switch.py  control.py  init_switch.py  inspection.py  mapping.py  room.py  scene_management.py  setup.py  zone_programming.py
commands/inspection/: __init__.py  devices.py  helpers.py  locations.py  scenes.py  status.py  switches.py
core/: __init__.py  auth.py  cache.py  config.py  controller.py
models/: __init__.py  button_config.py  room.py  types.py  utils.py
tests/: __init__.py  conftest.py  test_button_config.py  test_cache.py  test_config.py  test_controller.py  test_inspection.py  test_structure.py  test_utils.py
