[project]
name = "hue-control"
version = "0.1.0"
description = "CLI for controlling Philips Hue lights and programming scenes into switches"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
hue = "hue_control:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
